<resources>
    <string name="app_name">KDY_2022_WD01</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="btn_Reports">Reports</string>
    <string name="btn_Orders">ORDERS</string>
    <string name="btn_FoodRequests">Food Requests</string>
    <string name="btn_NeederRegistration">Needer Registration</string>
    <string name="btn_UserDetails">User Details</string>
    <string name="btn_FindFood">Find Food</string>
    <string name="btn_Donor">Donor</string>
    <string name="btn_Login">Login</string>
    <string name="btn_RateUs">Rate Us</string>
    <string name="btn_Vacancies">Vacancies</string>
    <string name="btn_HowToUse">How To Use</string>
    <string name="btnCeateAccount">CREATE AN ACCOUNT</string>
    <string name="btnGmail">Login with gmail</string>
    <string name="tvForgotPassword">Forgot Password?</string>
    <string name="etEmailHint">Enter email</string>
    <string name="etPassword">Enter Password</string>
    <string name="login">LOGIN</string>
</resources>